SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Calculation_Item__c/CPQ_Playbook_Rule_Calculation_Item__c.object-meta.xml
<CustomObject>
    <description>Item to be used in Rule Action Calculations</description>
    <label>CPQ Playbook Rule Calculation Item</label>
    <nameField>
        <label>CPQ Playbook  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CPQ Playbook Rule Calculation Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>