SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Calculation_Item__c/fields/Action_Name__c.field-meta.xml
<CustomField>
    <fullName>Action_Name__c</fullName>
    <formula>CPQ_Playbook_Rule_Action__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action Name</label>
    <type>Text</type>
</CustomField>