SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Calculation_Item__c/fields/Calculation_Source__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Source__c</fullName>
    <description>Source of Calculation Item's value</description>
    <inlineHelpText></inlineHelpText>
    <label>Calculation Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
            <value>
                <fullName>Static Value</fullName>
            </value>
            <value>
                <fullName>Contract Start Date</fullName>
            </value>
            <value>
                <fullName>Contract End Date</fullName>
            </value>
            <value>
                <fullName>Current Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>