SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Calculation_Item__c/fields/CPQ_Playbook_Question__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Playbook_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Question in which answer is taken for calculation</description>
    <inlineHelpText>Question in which answer is taken for calculation</inlineHelpText>
    <label>CPQ Playbook Question</label>
    <referenceTo>CPQ_Playbook_Question__c</referenceTo>
    <relationshipLabel>CPQ Playbook Rule Calculation Items</relationshipLabel>
    <relationshipName>CPQ_Playbook_Rule_Calculation_Items</relationshipName>
    <type>Lookup</type>
</CustomField>