SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Calculation_Item__c/fields/CPQ_Playbook_Rule_Action__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Playbook_Rule_Action__c</fullName>
    <description>Action in which item is used for calculation</description>
    <inlineHelpText>Action in which item is used for calculation</inlineHelpText>
    <label>CPQ Playbook Rule Action</label>
    <referenceTo>CPQ_Playbook_Rule_Action__c</referenceTo>
    <relationshipLabel>CPQ Playbook Rule Calculation Items</relationshipLabel>
    <relationshipName>CPQ_Playbook_Rule_Calculation_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>