SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Calculation_Item__c/fields/Entitlement_Calculation_Field__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Calculation_Field__c</fullName>
    <description>Field name from Entitlement housing calculation value</description>
    <inlineHelpText>Field name from Entitlement housing calculation value. &apos;Contract_Entitlement__c&apos; API fields names are valid. The only valid related object is: &apos;Product__r&apos;.</inlineHelpText>
    <label>Entitlement Calculation Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>