SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Calculation_Item__c/fields/Execution_Order__c.field-meta.xml
<CustomField>
    <fullName>Execution_Order__c</fullName>
    <description>Order in which item should be evaluated in its action calculation. Lower numbers execute first</description>
    <inlineHelpText>Order in which item should be evaluated in its action calculation. Lower numbers execute first</inlineHelpText>
    <label>Execution Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>