SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Calculation_Item__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determine if item is active and should be used in action calculation</description>
    <inlineHelpText>Determine if item is active and should be used in action calculation</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>