SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Calculation_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product in which value is taken for calculation</description>
    <inlineHelpText>Product in which value is taken for calculation</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>CPQ Playbook Rule Calculation Items</relationshipLabel>
    <relationshipName>CPQ_Playbook_Rule_Calculation_Items</relationshipName>
    <type>Lookup</type>
</CustomField>