SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Calculation_Item__c/fields/Product_Calculation_Field__c.field-meta.xml
<CustomField>
    <fullName>Product_Calculation_Field__c</fullName>
    <description>Attribute name from Product housing calculation value</description>
    <inlineHelpText>Attribute name from Product housing calculation value. Valid CPQ attributes are: &apos;Start_Date&apos;, &apos;End_Date&apos;, &apos;Quantity&apos;, &apos;Discount&apos;, &apos;Unit_Price&apos;, &apos;List_Price&apos;, &apos;Sub_Total_Price&apos;, and &apos;Total_Price&apos;. Any QuoteLineItem Field API name is also valid given that CPQ has stamped the value. Valid related objects are: &apos;PricebookEntry&apos; and &apos;Product2&apos; (Please enter as object.field).</inlineHelpText>
    <label>Product Calculation Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>