SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Calculation_Item__c/fields/Product_Calculation_Target_Rule_Action__c.field-meta.xml
<CustomField>
    <fullName>Product_Calculation_Target_Rule_Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If populated, the product value will only be considered in the calculation for the desired product added by the action specified here. If not populated, all occurances of the desired product will have their values considered.</description>
    <inlineHelpText>If populated, the product value will only be considered in the calculation for the desired product added by the action specified here. If not populated, all occurances of the desired product will have their values considered.</inlineHelpText>
    <label>Product Calculation Target Rule Action</label>
    <referenceTo>CPQ_Playbook_Rule_Action__c</referenceTo>
    <relationshipLabel>Product Calculation Targets</relationshipLabel>
    <relationshipName>Product_Calculation_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>