SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Calculation_Item__c/fields/Record_Lookup_Behavior__c.field-meta.xml
<CustomField>
    <fullName>Record_Lookup_Behavior__c</fullName>
    <description>Determines what subset of the question's selected records to include as calculation items.</description>
    <inlineHelpText>Determines what subset of the question's selected records to include as calculation items.</inlineHelpText>
    <label>Record Lookup Behavior</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Records</fullName>
            </value>
            <value>
                <fullName>Contributing Records Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>