SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Calculation_Item__c/fields/Record_Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>Record_Lookup_Field__c</fullName>
    <description>Field API name from record housing calculation value.</description>
    <inlineHelpText>Field API name from record housing calculation value. Field must be included in the question's query string in order to have a value populated.</inlineHelpText>
    <label>Record Lookup Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>