SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Calculation_Item__c/fields/Record_Lookup_Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Lookup_Field_Type__c</fullName>
    <description>Type of field the Record Lookup Field represents</description>
    <inlineHelpText>Type of field the Record Lookup Field represents</inlineHelpText>
    <label>Record Lookup Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Decimal</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>