SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Calculation_Item__c/fields/Static_Value_Boolean__c.field-meta.xml
<CustomField>
    <fullName>Static_Value_Boolean__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If static value type is &apos;Boolean&apos;, value stored here</description>
    <inlineHelpText>If static type is &apos;Boolean&apos;, value stored here</inlineHelpText>
    <label>Static Value (Boolean)</label>
    <type>Checkbox</type>
</CustomField>