SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Calculation_Item__c/fields/Static_Value_Currency__c.field-meta.xml
<CustomField>
    <fullName>Static_Value_Currency__c</fullName>
    <description>If static value type is &apos;Currency&apos;, value stored here</description>
    <inlineHelpText>If static value type is &apos;Currency&apos;, value stored here</inlineHelpText>
    <label>Static Value (Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>