SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Calculation_Item__c/fields/Static_Value_Date__c.field-meta.xml
<CustomField>
    <fullName>Static_Value_Date__c</fullName>
    <description>If static value type is &apos;Date&apos;, value stored here</description>
    <inlineHelpText>If static value type is &apos;Date&apos;, value stored here</inlineHelpText>
    <label>Static Value (Date)</label>
    <type>Date</type>
</CustomField>