SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Calculation_Item__c/fields/Static_Value_Decimal__c.field-meta.xml
<CustomField>
    <fullName>Static_Value_Decimal__c</fullName>
    <description>If static value type is &apos;Decimal&apos;, value stored here</description>
    <inlineHelpText>If static value type is &apos;Decimal&apos;, value stored here</inlineHelpText>
    <label>Static Value (Decimal)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>