SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Calculation_Item__c/fields/Static_Value_Integer__c.field-meta.xml
<CustomField>
    <fullName>Static_Value_Integer__c</fullName>
    <description>If static value type is &apos;Integer&apos;, value stored here</description>
    <inlineHelpText>If static value type is &apos;Integer&apos;, value stored here</inlineHelpText>
    <label>Static Value (Integer)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>