SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Calculation_Item__c/fields/Static_Value_Text__c.field-meta.xml
<CustomField>
    <fullName>Static_Value_Text__c</fullName>
    <description>If static value type is &apos;Picklist&apos;, &apos;Multi-Select Picklist&apos;, &apos;Text&apos;, or &apos;Text Area&apos;, value stored here</description>
    <inlineHelpText>If static value type is &apos;Picklist&apos;, &apos;Multi-Select Picklist&apos;, &apos;Text&apos;, or &apos;Text Area&apos;, value stored here</inlineHelpText>
    <label>Static Value (Text)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>